--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-07-28  Alan Modra  <amodra@bigpond.net.au>
+
+	* prefix.c (update_path): Don't strip single `.' path components
+	unless stripping a later `..' component.  Exit loop as soon as
+	a valid path is found.
+
 2002-07-27  Roger Sayle  <roger@eyesopen.com>
 
 	* builtins.def [DEF_GCC_BUILTIN]: Require an explicit ATTRS
