* stormy16.h (ASM_OUTPUT_SYMBOL_REF): Use ASM_OUTPUT_LABEL_REF.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@55822 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-07-28  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* stormy16.h (ASM_OUTPUT_SYMBOL_REF): Use ASM_OUTPUT_LABEL_REF.
+
 2002-07-28  Zack Weinberg  <zack@codesourcery.com>
 
 	* defaults.h (ASM_OUTPUT_MEASURED_SIZE): Take only two
