--- a/maintainer-scripts/ChangeLog
+++ b/maintainer-scripts/ChangeLog
@@ -1,3 +1,7 @@
+2002-07-28  Mark Mitchell  <mark@codesourcery.com>
+
+	* gcc_release: Use the 3.2 branch for snapshots.
+
 2002-05-31  Florian Weimer  <fw@deneb.enyo.de>
 
 	* update_web_docs (MANUALS): Include various flavours of the GNAT
