* pretty-print.h: Define more macros. 	* diagnostic.h (output_formatted_integer): Moved from... 	* diagnostic.c: ... here.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@55833 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-07-29  Gabriel Dos Reis  <gdr@nerim.net>
+
+	* pretty-print.h: Define more macros.
+	* diagnostic.h (output_formatted_integer): Moved from...
+	* diagnostic.c: ... here.
+
 2002-07-28  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* stormy16.h (ASM_OUTPUT_SYMBOL_REF): Use ASM_OUTPUT_LABEL_REF.
