--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2002-07-29  Richard Earnshaw  <rearnsha@arm.com>
+
+	* spew.c (space_for_token): Allocate zeroed memory for a new token
+	chunk.
+
 2002-07-27  Roger Sayle  <roger@eyesopen.com>
 
 	* decl.c (builtin_function_1): No need to explicitly mark
