--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2002-07-29  Richard Earnshaw  <rearnsha@arm.com>
+
+	* arm.md (sibcall, sibcall_value): Add RETURN as part of the pattern,
+	remove clobber of LR.
+	(sibcall_insn, sibcall_value_insn): Update accordingly.
+	(sibcall_epilogue): Remove debugging comment from assembler stream.
+
 2002-07-29  Gabriel Dos Reis  <gdr@nerim.net>
 
 	* pretty-print.h: Define more macros.
