2002-07-29  Aldy Hernandez  <aldyh@redhat.com>
	* config/rs6000/spe.md ("spe_evmra"): Change to unspec.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@55847 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-07-29  Aldy Hernandez  <aldyh@redhat.com>
+
+	* config/rs6000/spe.md ("spe_evmra"): Change to unspec.
+
 2002-07-29  Richard Henderson  <rth@redhat.com>
 
 	* emit-rtl.c (set_mem_attributes_minus_bitpos): Rename from
