--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-07-29  Aldy Hernandez  <aldy@quesejoda.com>
+
+	* config/rs6000/rs6000.md: Move altivec patterns from here...
+
+	* config/rs6000/altivec.md: ...to here.
+
 2002-07-29  Aldy Hernandez  <aldyh@redhat.com>
 
 	* config/rs6000/spe.md ("spe_evmra"): Change to unspec.
