2002-07-29  Aldy Hernandez  <aldyh@redhat.com>
	* config/rs6000/rs6000.h (RTX_COSTS): Add MULT case for 8540.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@55849 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-07-29  Aldy Hernandez  <aldyh@redhat.com>
+
+	* config/rs6000/rs6000.h (RTX_COSTS): Add MULT case for 8540.
+
 2002-07-29  Aldy Hernandez  <aldy@quesejoda.com>
 
 	* config/rs6000/rs6000.md: Move altivec patterns from here...
