--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,37 @@
+2002-07-29  Eric Christopher  <echristo@redhat.com>
+
+       	* config/mips/elf.h: Remove ecoff.h and gofast includes.
+        (DWARF2_DEBUGGING_INFO, DBX_DEBUGGING_INFO): Define unconditionally.
+        (SDB_DEBUGGING_INFO): Undefine.
+        (PREFERRED_DEBUGGING_TYPE): Set to DWARF2_DEBUG.
+	(PUT_SDB_SIZE): Remove.
+	(SUBTARGET_ASM_DEBUGGING_SPEC): Redefine.
+       	(STARTFILE_SPEC): Add isa3264 define.
+       	* config/mips/elf64.h: Ditto.  Move TARGET_MEM_FUNCTIONS from here...
+       	* config/mips/ecoff.h: Remove. and here...
+       	* config/mips/iris3.h: and here...
+       	* config/mips/sni-svr4.h: and here...
+       	* config/mips/mips.h: To here. Remove OBJECT_FORMAT_ROSE ifdefs.
+	Add assembler -mmdebug options for non-dwarf debugging.
+	* config/mips/r3900.h: Remove debug info defines.
+       	* config/mips/isa32-linux.h: Remove, move functionality to config.gcc.
+       	* config/mips/isa3264.h: Ditto.
+       	* config/mips/t-isa3264: Fix up for file removal and gofast configure
+       	change.
+       	* config/mips/t-elf: Ditto.
+       	* config/mips/t-ecoff: Ditto.
+       	* config/mips/t-r3900: Ditto.
+       	* config/mips/t-iris5-6: Ditto.
+       	* config/mips/t-isa3264: Ditto.
+       	* config/mips/t-linux: Remove.
+       	* config/mips/t-netbsd: Remove.
+       	* config/mips/t-mips: New file.
+       	* config/mips/t-gofast: Ditto.
+       	* config/mips/netbsd.h: Remove unnecessary undefines.
+       	* config/mips/linux.h: Remove #include of mips.h.
+       	* config.gcc: Add mips.h include for elf targets. Remove tm_file
+       	for ecoff. Add gofast configure option for mips.
+
 2002-07-29  Chris Demetriou  <cgd@broadcom.com>
 
 	* configure.in (mips*-*-*): Add a test to see if MIPS libgloss
@@ -114,7 +148,7 @@
 
 2002-07-29  Mike Stump  <mrs@apple.com>
 
-	* config.gcc (target_gtfiles): Initialize, as otherwise cross 
+	* config.gcc (target_gtfiles): Initialize, as otherwise cross
 	compilers hosted on powerpc-apple-darwin6.0 won't even build.
 
 2002-07-29  Richard Earnshaw  <rearnsha@arm.com>
