--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2002-07-30  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* cp-tree.h (CLASSTYPE_VFIELDS, VF_*, BV_*): Add more
+	documentation.
+
 2002-07-29  Alan Modra  <amodra@bigpond.net.au>
 
 	* cp-tree.h: Comment typo fix.
