--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2002-07-30  Gabriel Dos Reis  <gdr@nerim.net>
+
+	* c-pretty-print.c (pp_c_primary_expression): Handle STMT_EXPR.
+	(pp_c_postfix_expression): Handle ARROW_EXPR, FFS_EXPR,
+	COMPOUND_LITERAL_EXPR, VA_ARG_EXPR.
+	(pp_c_expression): Update.
+
 2002-07-29  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* alpha/vms-cc.c (preprocess_args, main): Use xstrdup and/or
