--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,7 @@
+2002-07-30  Gabriel Dos Reis  <gdr@nerim.net>
+
+	* cp-tree.h (VF_DERIVED_VALUE): Restore from previous deletion.
+
 2002-07-30  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* cp-tree.h (CLASSTYPE_VFIELDS, VF_*, BV_*): Add more
