alpha.h, [...] (ASM_OUTPUT_LABEL): Delete definition.
	* alpha.h, arc.h, arm/aout.h, avr.h, c4x.h, cris.h, d30v.h,
	darwin.h, dsp16xx.h, fr30.h, h8300.h, i370.h, i386.h, i960.h,
	ip2k.h, m32r.h, m68hc11.h, m68k.h, m88k.h, mcore.h, mips.h,
	mn10200.h, mn10300.h, ns32k.h, pa/pa-linux.h, pdp11.h, romp.h,
	rs6000/sysv4.h, s390/linux.h, sh.h, sparc.h, stormy16.h,
	v850.h, vax.h, xtensa.h (ASM_OUTPUT_LABEL): Delete definition.

	* defaults.h (ASM_OUTPUT_LABEL): Provide a default.
	* doc/tm.texi (ASM_OUTPUT_LABEL): Update docs.

From-SVN: r55872

--- a/gcc/doc/tm.texi
+++ b/gcc/doc/tm.texi
@@ -6397,7 +6397,8 @@ A C statement (sans semicolon) to output to the stdio stream
 @var{stream} the assembler definition of a label named @var{name}.
 Use the expression @code{assemble_name (@var{stream}, @var{name})} to
 output the name itself; before and after that, output the additional
-assembler syntax for defining the name, and a newline.
+assembler syntax for defining the name, and a newline.  A default
+definition of this macro is provided which is correct for most systems.
 
 @findex SIZE_ASM_OP
 @item SIZE_ASM_OP
