--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,15 @@
+2002-07-30  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* alpha.h, arc.h, arm/aout.h, avr.h, c4x.h, cris.h, d30v.h,
+	darwin.h, dsp16xx.h, fr30.h, h8300.h, i370.h, i386.h, i960.h,
+	ip2k.h, m32r.h, m68hc11.h, m68k.h, m88k.h, mcore.h, mips.h,
+	mn10200.h, mn10300.h, ns32k.h, pa/pa-linux.h, pdp11.h, romp.h,
+	rs6000/sysv4.h, s390/linux.h, sh.h, sparc.h, stormy16.h,
+	v850.h, vax.h, xtensa.h (ASM_OUTPUT_LABEL): Delete definition.
+
+	* defaults.h (ASM_OUTPUT_LABEL): Provide a default.
+	* doc/tm.texi (ASM_OUTPUT_LABEL): Update docs.
+
 2002-07-30  Gabriel Dos Reis  <gdr@nerim.net>
 
 	* c-pretty-print.c (pp_c_primary_expression): Handle STMT_EXPR.
