--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2002-07-30  Jeff Sturm  <jsturm@one-point.com>
+
+	* configure.in (LIBFFIINCS): Don't prepend MULTIBUILDTOP.
+	* configure: Rebuilt.
+
 2002-07-27  Alan Modra  <amodra@bigpond.net.au>
 
 	* sysdep/powerpc/locks.h: Formatting.
