--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-07-30  Gabriel Dos Reis  <gdr@nerim.net>
+
+	* c-pretty-print.h (pp_c_statement): Declare.
+	* c-pretty-print.c (pp_c_postfix_expression): #if 0 support for SRCLOC.
+	(pp_c_statement): Define.
+
 2002-07-30  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* alpha.h, arc.h, arm/aout.h, avr.h, c4x.h, cris.h, d30v.h,
