2002-07-29  Aldy Hernandez  <aldyh@redhat.com>
	* config/rs6000/rs6000.md: Disallow CCEQ compare with crnor/crnot
	for TARGET_SPE.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@55875 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/config/rs6000/rs6000.md
+++ b/gcc/config/rs6000/rs6000.md
@@ -13518,7 +13518,7 @@
 						      "cc_reg_operand" "y")
 				       (const_int 0)])
 		      (const_int 0)))]
-  ""
+  "!TARGET_SPE"
   "{crnor %E0,%j1,%j1|crnot %E0,%j1}"
   [(set_attr "type" "cr_logical")])
 
