--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-07-29  Aldy Hernandez  <aldyh@redhat.com>
+
+	* config/rs6000/rs6000.md: Disallow CCEQ compare with crnor/crnot
+	for TARGET_SPE.
+
 2002-07-30  Gabriel Dos Reis  <gdr@nerim.net>
 
 	* c-pretty-print.h (pp_c_statement): Declare.
