--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-07-30  Richard Sandiford  <rsandifo@redhat.com>
+
+	* config/mips/mips.h (SUBTARGET_ASM_DEBUGGING_SPEC): Fix typo.
+
 Tue Jul 30 18:31:31 2002  J"orn Rennecke <joern.rennecke@superh.com>
 
 	* sh.md (cond_delay_slot): New attribute.
