--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,7 @@
+2002-07-30  Franz Sirl  <Franz.Sirl-kernel@lauterbach.com>
+
+	* lang-specs.h: Remove __GXX_ABI_VERSION, moved to gcc.c.
+
 2002-07-30  Gabriel Dos Reis  <gdr@nerim.net>
 
 	* cp-tree.h (VF_DERIVED_VALUE): Restore from previous deletion.
